just the basics first

--- a/pom.xml
+++ b/pom.xml
@@ -115,12 +115,14 @@
       <version>${base.version}</version>
       <type>war</type>
     </dependency>
+    
     <dependency>
       <groupId>org.mmbase</groupId>
       <artifactId>mmbase-resources</artifactId>
       <version>${mmbase.version}</version>
       <type>war</type>
     </dependency>
+    
     <dependency>
       <groupId>org.mmbase</groupId>
       <artifactId>mmbase</artifactId>
@@ -135,12 +137,12 @@
       <type>war</type>
     </dependency>
     
-    <dependency>
+    <!-- <dependency>
       <groupId>org.mmbase</groupId>
       <artifactId>mmbase-mmsite</artifactId>
       <version>${mmbase.version}</version>
       <type>war</type>
-    </dependency>
+    </dependency> -->
     
     <!-- <dependency>
       <groupId>org.mmbase</groupId>
