--- a/pom.xml
+++ b/pom.xml
@@ -95,15 +95,54 @@
         </executions>
       </plugin>
 
-<!-- 
-      <plugin>
+     <plugin>
         <groupId>org.mortbay.jetty</groupId>
-        <artifactId>maven-jetty-plugin</artifactId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>7.0.0.pre5</version>
         <configuration>
           <jettyEnvXml>${basedir}/jetty-env.xml</jettyEnvXml>
+          <systemProperties>
+            <systemProperty>
+              <name>com.sun.management.jmxremote</name>
+              <value>true</value>
+            </systemProperty>
+            <systemProperty>
+              <!--
+              This may not be very safe, but we use jetty only for developing
+              See: http://communitymapbuilder.org/display/JETTY/How+to+enable+serving+aliased+files
+              -->
+              <name>org.mortbay.util.FileResource.checkAliases</name>
+              <value>false</value>
+            </systemProperty>
+          </systemProperties>
         </configuration>
+        <!--
+            These jars are needed by jetty-env.xml
+            which is used on mvn jetty:run
+        -->
+        <dependencies>
+          <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
+            <scope>runtime</scope>
+          </dependency>
+          <dependency>
+            <groupId>hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>1.8.0.7</version>
+            <scope>runtime</scope>
+          </dependency>
+          <!-- Testing on MySQL only for now -->
+          <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+            <scope>runtime</scope>
+          </dependency>
+        </dependencies>
+
       </plugin>
- -->
 
     </plugins>
   </build>
