first steps with urlconverter for main content

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -129,7 +129,7 @@
   </error-page>
   <error-page>
     <error-code>404</error-code>
-    <location>/errorpages/404.jsp</location>
+    <location>/error/404.jspx</location>
   </error-page>
   <error-page>
     <exception-type>java.lang.Exception</exception-type>
