added mmbase streams and media applications, found conflict with existing media in tmf

--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,19 @@
       <classifier>classes</classifier>
       <scope>provided</scope>
     </dependency> -->
+    <dependency>
+      <groupId>org.mmbase</groupId>
+      <artifactId>mmbase-media</artifactId>
+      <version>${mmbase.version}</version>
+      <type>war</type>
+    </dependency>
     
+    <dependency>
+      <groupId>org.mmbase</groupId>
+      <artifactId>mmbase-streams</artifactId>
+      <version>${mmbase.version}</version>
+      <type>war</type>
+    </dependency>
     <!-- <dependency>
       <groupId>org.mmbase</groupId>
       <artifactId>mmbase-media</artifactId>
