moving article to content, started w. media urlconverter

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,41 @@ html
 src/main/webapp/WEB-INF/config/applications
 target
 *.bbprojectd/
+*.idea
 *.iws
 *.ipr
 *.iml
+
+.idea/libraries/Maven__xml_apis_xml_apis_1_3_04.xml
+
+.idea/libraries/Maven__xerces_xercesImpl_2_9_1.xml
+
+.idea/libraries/Maven__org_mmbase_tinymce_tinymce_war_3_2_7.xml
+
+.idea/libraries/Maven__org_mmbase_mmbase_streams_war_1_9_SNAPSHOT.xml
+
+.idea/libraries/Maven__org_mmbase_mmbase_resources_war_1_9_SNAPSHOT.xml
+
+.idea/libraries/Maven__org_mmbase_mmbase_media_war_1_9_SNAPSHOT.xml
+
+.idea/libraries/Maven__org_mmbase_mmbase_email_war_1_9_SNAPSHOT.xml
+
+.idea/libraries/Maven__org_mmbase_base_webapp_war_1_9_SNAPSHOT.xml
+
+.idea/libraries/Maven__org_mmbase_mmbase_1_9_SNAPSHOT.xml
+
+.idea/libraries/Maven__opensymphony_oscache_2_4.xml
+
+.idea/libraries/Maven__net_sf_saxon_saxon_dom_9_1_0_6.xml
+
+.idea/libraries/Maven__commons_fileupload_commons_fileupload_1_2_1.xml
+
+.idea/libraries/Maven__commons_io_commons_io_1_3_2.xml
+
+.idea/libraries/Maven__hsqldb_hsqldb_1_8_0_7.xml
+
+.idea/libraries/Maven__javax_jms_jms_1_1.xml
+
+.idea/libraries/Maven__javax_servlet_servlet_api_2_5.xml
+
+.idea/libraries/Maven__net_sf_saxon_saxon_9_1_0_6.xml
