--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,14 @@
       <classifier>classes</classifier>
       <scope>provided</scope>
     </dependency> -->
+    
+    <dependency>
+      <groupId>org.mmbase</groupId>
+      <artifactId>mmbase-editwizard</artifactId>
+      <version>${mmbase.version}</version>
+      <type>war</type>
+    </dependency>
+    
     <dependency>
       <groupId>org.mmbase</groupId>
       <artifactId>mmbase-media</artifactId>
