--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,12 +23,15 @@
     <param-value>false</param-value>
   </context-param>
 
+  <context-param>
+    <param-name>mmbase.servlet.images.addfilename</param-name>
+    <param-value>yes</param-value>
+  </context-param>
   <!-- some for attachments -->
   <context-param>
     <param-name>mmbase.servlet.attachments.addfilename</param-name>
     <param-value>yes</param-value>
   </context-param>
-
 
   <filter>
     <filter-name>FrameworkFilter</filter-name>
