--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,13 @@
     
     <dependency>
       <groupId>org.mmbase</groupId>
+      <artifactId>mmbase-crontab</artifactId>
+      <version>${mmbase.version}</version>
+      <type>war</type>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.mmbase</groupId>
       <artifactId>mmbase-email</artifactId>
       <version>${mmbase.version}</version>
       <type>war</type>
