error pages, one for 500

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -184,7 +184,7 @@
   </error-page>
   <error-page>
     <exception-type>java.lang.Exception</exception-type>
-    <location>/mmbase/errorpages/500.jsp</location>
+    <location>/error/500.jspx</location>
   </error-page>
   <error-page>
     <error-code>503</error-code>
