--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -172,11 +172,11 @@
 
   <error-page>
     <error-code>400</error-code>
-    <location>/mmbase/errorpages/400.jsp</location>
+    <location>/error/400.jspx</location>
   </error-page>
   <error-page>
     <error-code>403</error-code>
-    <location>/mmbase/errorpages/403.jsp</location>
+    <location>/error/403.jspx</location>
   </error-page>
   <error-page>
     <error-code>404</error-code>
@@ -188,7 +188,7 @@
   </error-page>
   <error-page>
     <error-code>503</error-code>
-    <location>/error/503.jsp</location>
+    <location>/error/503.jspx</location>
   </error-page>
 
 
@@ -205,7 +205,7 @@
   <env-entry>
     <env-entry-name>mmbase/mmbaseroot/basename</env-entry-name>
     <env-entry-type>java.lang.String</env-entry-type>
-    <env-entry-value>oi</env-entry-value>
+    <env-entry-value>tmf</env-entry-value>
   </env-entry>
   <env-entry>
     <env-entry-name>mmbase-builders/mmbasecontexts/readall</env-entry-name>
