--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,36 +1,46 @@
 {
-  "name": "tmf",
+  "name": "tmf-frontend",
   "version": "0.0.1",
-  "description": "",
-  "main": "gulpfile.js",
+  "description": "TMF frontend sources",
+  "main": "gulpfile.babel.js",
   "scripts": {
     "test": "gulp test"
   },
   "repository": {
     "type": "git",
-    "url": "https://gitub/tmf.git"
+    "url": "https://github.com/elfuego/tacticalmediafiles.git"
   },
-  "author": "Andre van Toly",
+  "author": "André van Toly",
   "license": "MIT",
   "devDependencies": {
-    "del": "~1.2.0",
-    "browser-sync": "^1.8.2",
+    "babel": "^6.5.2",
+    "babel-core": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.9.0",
     "browser-sync": "^2.12.10",
+    "del": "~1.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-copy": "^0.0.2",
-    "gulp-jsbeautifier": "~2.0.3",
-    "gulp-jshint": "~2.0.1",
-    "jshint-stylish": "~2.2.0",
     "gulp-iconfont": "^8.0.1",
     "gulp-iconfont-css": "^2.1.0",
+    "gulp-jsbeautifier": "~2.0.3",
+    "gulp-jshint": "^2.0.1",
+    "gulp-less": "^3.1.0",
     "gulp-notify": "^2.2.0",
     "gulp-pug": "^3.0.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-less": "^3.1.0",
     "gulp-uglify": "^1.5.3",
-    "gulp-watch": "^4.3.5",
-    "require-dir": "~0.3.0"
+    "jshint-stylish": "^2.2.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
+  "dependencies": {
+    "jshint": "^2.9.4"
   }
 }
